[package]
name = "easy-fs"
version = "0.1.1"
edition = "2018"
license = "GPL-3.0-or-later"
description = "A simple fs pack for self-using"
repository = "https://gitee.com/belowthetree/easy-fs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
